@@ -1,3 +1,7 @@
+2014-03-08  Carl Hetherington  <cth@carlh.net>
+
+	* Support for unsigned 8-bit audio (hmm!).
+
 2014-03-06  Carl Hetherington  <cth@carlh.net>
 
 	* Version 1.65.0 released.
